--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,10 +45,7 @@ dependencies:
   url_launcher: ^6.1.6
   hive_flutter: ^1.1.0
   mqtt:
-    git:
-      url: https://github.com/KoiFresh/dieklingel-core.git
-      ref: feature/try-go
-      path: kiosk/packages/mqtt
+    path: packages/mqtt
   flutter_bloc: ^8.1.2
   pull_down_button: ^0.8.1
   shelf_router: ^1.1.4
