--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   path: ^1.8.3
   mqtt_client: ^10.0.0
   provider: ^6.0.5
+  blueprint: ^0.0.3
 
 dev_dependencies:
   flutter_test:
