--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,8 @@ dependencies:
   provider: ^6.0.5
   blueprint: ^0.0.3
   rxdart: ^0.27.7
+  permission_handler: ^11.0.1
+  permission_handler_web: ^0.0.2
 
 dev_dependencies:
   flutter_test:
