--- a/packages/rpc/pubspec.yaml
+++ b/packages/rpc/pubspec.yaml
@@ -1,17 +1,16 @@
-name: mqtt
-description: A new Flutter package project.
+name: rpc
+description: "A new Flutter package project."
 version: 0.0.1
 homepage:
 
 environment:
-  sdk: '>=3.0.6 <4.0.0'
+  sdk: '>=3.2.0 <4.0.0'
   flutter: ">=1.17.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  mqtt_client: ^10.0.0
-  uuid: ^4.0.0
+  uuid: ^4.3.3
 
 dev_dependencies:
   flutter_test:
