--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,12 +40,14 @@ dependencies:
   firebase_core: ^2.6.1
   firebase_messaging: ^14.4.0
   audio_session: ^0.1.13
-  uuid: ^3.0.6
+  uuid: ^4.3.3
   flutter_local_notifications: ^16.1.0
   url_launcher: ^6.1.6
   hive_flutter: ^1.1.0
   mqtt:
     path: packages/mqtt
+  rpc:
+    path: packages/rpc
   flutter_bloc: ^8.1.2
   pull_down_button: ^0.9.3
   http: ^1.1.0
