--- a/ios/Podfile
+++ b/ios/Podfile
@@ -27,6 +27,8 @@ require File.expand_path(File.join('packages', 'flutter_tools', 'bin', 'podhelpe
 
 flutter_ios_podfile_setup
 
+source "https://gitlab.linphone.org/BC/public/podspec.git"
+
 target 'Runner' do
   use_frameworks!
   use_modular_headers!
@@ -38,9 +40,4 @@ post_install do |installer|
   installer.pods_project.targets.each do |target|
     flutter_additional_ios_build_settings(target)
   end
-end
-
-target 'ImageNotification' do
-  use_frameworks!
-  pod 'Firebase/Messaging'
 end
