--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,31 +29,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  # use version 0.9.22 caused by ios speakerphone issue:
-  # https://github.com/flutter-webrtc/flutter-webrtc/issues/1328
-  # https://github.com/flutter-webrtc/flutter-webrtc/issues/1326
-  flutter_webrtc: ^0.9.36
-  firebase_core: ^2.6.1
-  firebase_messaging: ^14.4.0
-  audio_session: ^0.1.13
-  uuid: ^3.0.6
-  flutter_local_notifications: ^13.0.0
   url_launcher: ^6.1.6
-  hive_flutter: ^1.1.0
-  mqtt:
-    path: packages/mqtt
-  flutter_bloc: ^8.1.2
-  pull_down_button: ^0.8.1
-  shelf_router: ^1.1.4
-  shelf: ^1.4.1
-  http: ^0.13.6
-  async: ^2.11.0
-  path: ^1.8.3
-  mqtt_client: ^10.0.0
+  flutter_liblinphone:
+    path: /Users/kai/Projects/dieklingel/app/packages/flutter_liblinphone
 
 dev_dependencies:
   flutter_test:
